--- a/BowandArrow/app/src/main/res/layout/content_main.xml
+++ b/BowandArrow/app/src/main/res/layout/content_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="horizontal"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.winfo.bowandarrow.MainActivity"
     tools:showIn="@layout/activity_main">
@@ -15,5 +16,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="No homes saved yet"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"/>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/default_house"
+        android:layout_centerInParent="true"/>
+
 </RelativeLayout>
