added basic view home page

--- a/BowandArrow/app/src/main/res/values/colors.xml
+++ b/BowandArrow/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#e5ccff</color>
+    <color name="colorPrimaryDark">#a44dff</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
