fixed colors, deleted extra on click

--- a/BowandArrow/app/src/main/res/values/colors.xml
+++ b/BowandArrow/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#e5ccff</color>
     <color name="colorPrimaryDark">#a44dff</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ffda66</color>
 </resources>
