--- a/BowandArrow/app/src/main/res/layout/content_edit_home.xml
+++ b/BowandArrow/app/src/main/res/layout/content_edit_home.xml
@@ -15,63 +15,62 @@
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ScrollView01"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical">
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:orientation="vertical"
+            android:layout_height="fill_parent">
+
+            <EditText
+                android:id="@+id/nickname"
+                android:layout_height="wrap_content"
+                android:hint="Nickname"
+                android:inputType="textPersonName"
+                android:layout_width="fill_parent">
+            </EditText>
+
+            <EditText
+                android:id="@+id/bedrooms"
+                android:layout_height="wrap_content"
+                android:hint="Bedrooms"
+                android:inputType="numberDecimal"
+                android:layout_width="fill_parent">
+            </EditText>
+
+            <EditText
+                android:id="@+id/bathrooms"
+                android:layout_height="wrap_content"
+                android:hint="Bathrooms"
+                android:layout_width="fill_parent"
+                android:inputType="numberDecimal">
+            </EditText>
+
+            <EditText
+                android:id="@+id/price"
+                android:layout_height="wrap_content"
+                android:hint="Price"
+                android:inputType="numberDecimal"
+                android:layout_width="fill_parent">
+            </EditText>
+
+            <EditText
+                android:id="@+id/address"
+                android:layout_height="wrap_content"
+                android:hint="Address"
+                android:inputType="textPersonName"
+                android:layout_width="fill_parent">
+            </EditText>
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Submit"
+                android:onClick="submit"
+                />
+
+        </LinearLayout>
     </ScrollView>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:orientation="vertical"
-        android:layout_height="fill_parent">
-
-        <EditText
-            android:id="@+id/nickname"
-            android:layout_height="wrap_content"
-            android:hint="Nickname"
-            android:inputType="textPersonName"
-            android:layout_width="fill_parent">
-        </EditText>
-
-        <EditText
-            android:id="@+id/bedrooms"
-            android:layout_height="wrap_content"
-            android:hint="Bedrooms"
-            android:inputType="numberDecimal"
-            android:layout_width="fill_parent">
-        </EditText>
-
-        <EditText
-            android:id="@+id/bathrooms"
-            android:layout_height="wrap_content"
-            android:hint="Bathrooms"
-            android:layout_width="fill_parent"
-            android:inputType="numberDecimal">
-        </EditText>
-
-        <EditText
-            android:id="@+id/price"
-            android:layout_height="wrap_content"
-            android:hint="Price"
-            android:inputType="numberDecimal"
-            android:layout_width="fill_parent">
-        </EditText>
-
-        <EditText
-            android:id="@+id/address"
-            android:layout_height="wrap_content"
-            android:hint="Address"
-            android:inputType="textPersonName"
-            android:layout_width="fill_parent">
-        </EditText>
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Submit"
-            android:onClick="submit"
-            />
-
-    </LinearLayout>
 
 </RelativeLayout>
