--- a/BowandArrow/app/src/main/res/layout/content_main.xml
+++ b/BowandArrow/app/src/main/res/layout/content_main.xml
@@ -21,9 +21,9 @@
         android:layout_centerHorizontal="true"/>
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/default_house"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
